--- a/java/libraries/net/pom.xml
+++ b/java/libraries/net/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.processing</groupId>
         <artifactId>processing-complete</artifactId>
-        <version>3.0beta-SNAPSHOT</version>
+        <version>3.0-SNAPSHOT</version>
         <relativePath>../../../build/pom.xml</relativePath>
     </parent>
     
