--- a/core/pom.xml
+++ b/core/pom.xml
@@ -22,26 +22,41 @@
               
     <dependencies>
         <dependency>
-            <groupId>gluegen-rt</groupId>  
-            <artifactId>gluegen-rt</artifactId>  
-            <version>3.0</version>   
-            <scope>system</scope>
-            <systemPath>${project.basedir}/library/gluegen-rt.jar</systemPath>
-        </dependency>
-        <dependency>
-            <groupId>jogl-all</groupId>  
-            <artifactId>jogl-all</artifactId>  
-            <version>3.0</version>   
-            <scope>system</scope>
-            <systemPath>${project.basedir}/library/jogl-all.jar</systemPath>
-        </dependency>
-        
-        <dependency>
             <groupId>apple</groupId>  
             <artifactId>apple</artifactId>  
             <version>3.0</version>   
             <scope>system</scope>
             <systemPath>${project.basedir}/apple.jar</systemPath>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.jogamp.gluegen</groupId>
+            <artifactId>gluegen-rt-main</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.jogamp.jogl</groupId>
+            <artifactId>jogl</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.jogamp.jogl</groupId>
+            <artifactId>jogl-all</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.jogamp.jogl</groupId>
+            <artifactId>newt-main</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jogamp.jogl</groupId>
+            <artifactId>nativewindow-main</artifactId>
+            <version>2.3.2</version>
         </dependency>
         
     </dependencies> 
