--- a/app/pom.xml
+++ b/app/pom.xml
@@ -20,91 +20,47 @@
     </description>
 
 
+        
     <dependencies>
         <dependency>
             <groupId>org.processing</groupId>
             <artifactId>core</artifactId>
             <version>3.1</version>
         </dependency>
-
-<!--        <dependency>
-            <groupId>antlr</groupId>
-            <artifactId>antlr</artifactId>
-            <version>2.7.1</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/antlr.jar</systemPath>
-        </dependency>-->
-
+           
         <dependency>
-            <groupId>apple</groupId>
-            <artifactId>apple</artifactId>
-            <version>2.2.1</version>
+            <groupId>com.apple</groupId>  
+            <artifactId>AppleJavaExtensions</artifactId>  
+            <version>processing</version>   
             <scope>system</scope>
             <systemPath>${project.basedir}/../core/apple.jar</systemPath>
         </dependency>
+        
+        <dependency>
+            <groupId>net.java.dev.jna</groupId>  
+            <artifactId>jna</artifactId>  
+            <version>3.5.2</version>   
+        </dependency>
+        
+        <dependency>
+            <groupId>net.java.dev.jna</groupId>  
+            <artifactId>platform</artifactId>  
+            <version>3.5.2</version>   
+        </dependency>
 
+        <!-- version found in app/lib/ant.jar/org/apache/tools/ant/version.txt -->
         <dependency>
-            <groupId>ant</groupId>
-            <artifactId>ant</artifactId>
-            <version>2.2.1</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/ant.jar</systemPath>
+            <groupId>org.apache.ant</groupId>  
+            <artifactId>ant</artifactId>  
+            <version>1.8.2</version>   
         </dependency>
+        
         <dependency>
-            <groupId>ant-launcher</groupId>
-            <artifactId>ant-launcher</artifactId>
-            <version>2.2.1</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/ant-launcher.jar</systemPath>
+            <groupId>org.apache.ant</groupId>  
+            <artifactId>ant-launcher</artifactId>  
+            <version>1.8.2</version>   
         </dependency>
-        <!--        <dependency>
-            <groupId>jdt-core</groupId>
-            <artifactId>jdt-core</artifactId>
-            <version>2.2.1</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/jdt-core.jar</systemPath>
-        </dependency>-->
-        <dependency>
-            <groupId>net.java.dev.jna</groupId>
-            <artifactId>jna</artifactId>
-            <version>4.2.0</version>
-        </dependency>
-        <!--        <dependency>
-            <groupId>org-netbeans-swing-outline</groupId>
-            <artifactId>org-netbeans-swing-outline</artifactId>
-            <version>2.2.1</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/org-netbeans-swing-outline.jar</systemPath>
-        </dependency>
-        <dependency>
-            <groupId>com.ibm.icu_4.4.2.v20110823</groupId>
-            <artifactId>com.ibm.icu_4.4.2.v20110823</artifactId>
-            <version>2.2.1</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/com.ibm.icu_4.4.2.v20110823.jar</systemPath>
-        </dependency>
-        <dependency>
-            <groupId>jdi</groupId>
-            <artifactId>jdi</artifactId>
-            <version>2.2.1</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/jdi.jar</systemPath>
-        </dependency>
-        <dependency>
-            <groupId>jdimodel</groupId>
-            <artifactId>jdimodel</artifactId>
-            <version>2.2.1</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/jdimodel.jar</systemPath>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.osgi_3.8.1.v20120830-144521</groupId>
-            <artifactId>org.eclipse.osgi_3.8.1.v20120830-144521</artifactId>
-            <version>2.2.1</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/org.eclipse.osgi_3.8.1.v20120830-144521.jar</systemPath>
-        </dependency>-->
-
+        
     </dependencies>
 
     <build>
