--- a/core/pom.xml
+++ b/core/pom.xml
@@ -20,31 +20,47 @@
     </description>
 
 
-    <dependencies>
+     <dependencies>
         <dependency>
-            <groupId>gluegen-rt</groupId>
-            <artifactId>gluegen-rt</artifactId>
-            <version>3.1</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/library/gluegen-rt.jar</systemPath>
-        </dependency>
-        <dependency>
-            <groupId>jogl-all</groupId>
-            <artifactId>jogl-all</artifactId>
-            <version>2.3.2</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/library/jogl-all.jar</systemPath>
-        </dependency>
-
-        <dependency>
-            <groupId>apple</groupId>
-            <artifactId>apple</artifactId>
-            <version>3.1</version>
+            <groupId>com.apple</groupId>  
+            <artifactId>AppleJavaExtensions</artifactId>  
+            <version>processing</version>   
             <scope>system</scope>
             <systemPath>${project.basedir}/apple.jar</systemPath>
         </dependency>
+        
+        <dependency>
+            <groupId>org.jogamp.gluegen</groupId>
+            <artifactId>gluegen-rt-main</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.jogamp.jogl</groupId>
+            <artifactId>jogl</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.jogamp.jogl</groupId>
+            <artifactId>jogl-all</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.jogamp.jogl</groupId>
+            <artifactId>newt-main</artifactId>
+            <version>2.3.2</version>
+        </dependency>
 
+        <dependency>
+            <groupId>org.jogamp.jogl</groupId>
+            <artifactId>nativewindow-main</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+        
     </dependencies>
+    
     <build>
         <sourceDirectory>src</sourceDirectory>
 
@@ -75,7 +91,7 @@
                                 <copy todir="target/classes/">
                                     <fileset dir="bin/"/>
                                 </copy>
-                            </target>
+                            </target>                            
                         </configuration>
                         <goals>
                             <goal>run</goal>
