--- a/java/pom.xml
+++ b/java/pom.xml
@@ -5,13 +5,13 @@
     <parent>
         <groupId>org.processing</groupId>
         <artifactId>processing-complete</artifactId>
-        <version>3.1.1-SNAPSHOT</version>
+        <version>3.1.1-papart-SNAPSHOT</version>
         <relativePath>../build/pom.xml</relativePath>
     </parent>
 
     <groupId>org.processing</groupId>
     <artifactId>java-mode</artifactId>
-    <version>3.1.1-SNAPSHOT</version>
+    <version>3.1.1-papart-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Processing Java Mode</name>
@@ -24,12 +24,12 @@
         <dependency>
             <groupId>org.processing</groupId>
             <artifactId>core</artifactId>
-            <version>3.1.1-SNAPSHOT</version>
+            <version>3.1.1-papart-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.processing</groupId>
             <artifactId>pde</artifactId>
-            <version>3.1.1-SNAPSHOT</version>
+            <version>3.1.1-papart-SNAPSHOT</version>
         </dependency>
         
                 <!-- version found in app/lib/ant.jar/org/apache/tools/ant/version.txt -->
