--- a/core/pom.xml
+++ b/core/pom.xml
@@ -43,7 +43,7 @@
         
         <dependency>
             <groupId>org.jogamp.jogl</groupId>
-            <artifactId>jogl-all</artifactId>
+            <artifactId>jogl-all-main</artifactId>
             <version>2.3.2</version>
         </dependency>
         
