--- a/core/pom.xml
+++ b/core/pom.xml
@@ -59,6 +59,13 @@
             <version>2.3.2</version>
         </dependency>
         
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.0</version>
+            <type>jar</type>
+        </dependency>
+        
     </dependencies>
     
     <build>
